# hospitality-api

./: swagger.json
app/: README.md  openapi.yaml  setup.cfg
app/.openapi-generator/: FILES
app/src/openapi_server/: main.py  security_api.py
app/src/openapi_server/apis/: accommodation_api.py  accommodation_api_base.py  announcement_api.py  announcement_api_base.py  article_api.py  article_api_base.py  common_api.py  common_api_base.py  deprecated_api.py  deprecated_api_base.py  distinct_api.py  distinct_api_base.py  event_api.py  event_api_base.py  event_short_api.py  event_short_api_base.py  file_upload_api.py  file_upload_api_base.py  geo_api.py  geo_api_base.py  geo_converter_api.py  geo_converter_api_base.py  json_ld_api.py  json_ld_api_base.py  location_api.py  location_api_base.py  meta_data_api.py  meta_data_api_base.py  odh_activity_poi_api.py  odh_activity_poi_api_base.py  odh_tag_api.py  odh_tag_api_base.py  publisher_api.py  publisher_api_base.py  push_response_api.py  search_api.py  (+14 more)
app/tests/: test_accommodation_api.py  test_announcement_api.py  test_article_api.py  test_common_api.py  test_deprecated_api.py  test_distinct_api.py  test_event_api.py  test_event_short_api.py  test_file_upload_api.py  test_geo_api.py  test_geo_converter_api.py  test_json_ld_api.py  test_location_api.py  test_meta_data_api.py  test_odh_activity_poi_api.py  test_odh_tag_api.py  test_publisher_api.py  test_push_response_api.py  test_search_api.py  test_source_api.py  test_tag_api.py  test_urban_green_api.py  test_venue_api.py  test_weather_api.py  test_webcam_info_api.py
(+213 files in other folders)
