[metadata]
name = openapi_server
version = v1
description = Open Data Hub Tourism Api based on .Net Core with PostgreSQL
long_description = file: README.md
keywords = OpenAPI Open Data Hub Tourism Api
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
